--- a/blorgh/app/views/blorgh/posts/show.html.erb
+++ b/blorgh/app/views/blorgh/posts/show.html.erb
@@ -10,5 +10,15 @@
   <%= @post.text %>
 </p>
 
+<h3>Comments</h3>
+<%= render @post.comments %>
+
+<%= render "blorgh/comments/form" %>
+
+<p>
+  <b>Author:</b>
+  <%= @post.author %>
+</p>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
